llm and chatbot testing

--- a/projects/llm_page/index.html
+++ b/projects/llm_page/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-    <title>LLM Testing</title>
+    <title>LLM and Chatbot Testing</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -15,9 +15,8 @@
 
   <h2 style="display:flex;align-items:center;">
     <span style="background-color:hsl(37, 100%, 50%);height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
-    LLM Testing
+    LLM and Chatbot Testing
   </h2>
-
     <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
         <tbody>
             <tr style="padding:0px">
@@ -27,6 +26,50 @@
                   </p>
                 </td>
               </tr>
+
+              <tr style="padding:0px">
+                <td style="padding-left:2.5%;width:63%;vertical-align:middle">   
+
+
+                  <p style="text-align: justify;"><span style="background-color: hsl(37, 100%, 70%);"><b>Evaluating Chatbots to Promote Users' Trust -- Practices and Open Problems
+                  </b></span><br>
+                  
+
+                  <p style="text-align: justify;"><span style="background-color: hsl(37, 100%, 70%);"><b></b></span><br>
+                      <i><b>Collaborators: </b>AIISC - University of South Carolina, Tallinn University of Technology, Cisco Research, IBM Research</i>
+                      <br>
+                      <i><b>Authors: </b>Biplav Srivastava, Kausik Lakkaraju, Tarmo Koppel, Vignesh Narayanan, Ashish Kundu, Sachindra Joshi</i>
+                      <br>
+                    </p>
+                    <p style="text-align: justify;">
+                      Chatbots, the common moniker for collaborative assistants, are Artificial Intelligence (AI) software that enables people to naturally interact with them to get tasks done. 
+                      Although chatbots have been studied since the dawn of AI, they have particularly caught the imagination of the public and businesses since the launch of easy-to-use and general-purpose Large Language Model-based chatbots like ChatGPT. 
+                      As businesses look towards chatbots as a potential technology to engage users, who may be end customers, suppliers, or even their own employees, proper testing of chatbots is important to address and mitigate issues of trust related to service or product performance, user satisfaction and long-term unintended consequences for society. 
+                      This paper reviews current practices for chatbot testing, identifies gaps as open problems in pursuit of user trust, and outlines a path forward.
+                    </p>
+                  
+                  <p><i><b>Representative Publications</b></i></p>
+                  <ul>
+                    <li>Evaluating Chatbots to Promote Users' Trust -- Practices and Open Problems
+                      <br> <a href="https://arxiv.org/pdf/2309.05680.pdf" target="_blank"><b>[Paper]</b></a>
+                      <!-- <a href="https://github.com/ai4society/LLM-CaseStudies/tree/main/Finance" target="_blank" type="text/plain"><b>[GitHub Respository]</b></a> -->
+                      <a href="../llm_page/bib/chatbot_evaluation2023.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    </li>
+                  </ul>
+                  <tr style="padding:0px">
+                    <td style="padding-left:2.5%;width:73%;vertical-align:middle">
+                        <img src="images/gpt.png" style="max-width:43%; display: block; margin: 0 auto;">
+                    </td>
+                  </tr>
+                <!-- <tr style="padding:0px">
+                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                  <img src="images/bard-q11.png" style="max-width:50%; display: block; margin: 0 auto;">
+                </td>
+              </tr>
+              </td> 
+            </tr>
+            <br><br> -->
+
 
               <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">   
@@ -56,18 +99,7 @@
                       <a href="../llm_page/bib/icaif2023.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
                   </ul>
-                  <!-- <tr style="padding:0px">
-                    <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                        <img src="images/diffs.png" style="max-width:43%; display: block; margin: 0 auto;">
-                    </td>
-                  </tr> -->
-                <!-- <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                  <img src="images/bard-q11.png" style="max-width:50%; display: block; margin: 0 auto;">
-                </td>
-              </tr> -->
-              </td> 
-            </tr>
+
             <br><br>
 
               <tr style="padding:0px">
@@ -103,20 +135,10 @@
                         <img src="images/diffs.png" style="max-width:43%; display: block; margin: 0 auto;">
                     </td>
                   </tr>
-                <!-- <tr style="padding:0px">
-                <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                  <img src="images/bard-q11.png" style="max-width:50%; display: block; margin: 0 auto;">
-                </td>
-              </tr> -->
               </td> 
 
             </tr>
             <br><br>
-            <!-- <tr style="padding: 0px">
-              <td style="padding-left:2.5%;width:63%;vertical-align:middle">
-                <h3>More papers on 'Rating of AI Systems'<br><a href="https://sites.google.com/site/biplavsrivastava/research-1/trustedai?authuser=0#h.useljqp3rw7i" target="_blank"><b>[Click here]</b></a></h3>
-              </td> 
-            </tr> -->
 
         </tbody>
     </table>
