projects and publications update

--- a/projects/index.html
+++ b/projects/index.html
@@ -148,7 +148,7 @@
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
                             <span style="background-color:hsla(221, 81%, 65%, 0.835);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
-                            LLM Testing
+                            LLM and Chatbot Testing
 
                             <span class="tag tag-method">Trusted AI</span>
                         </h3>
