--- a/publications/index.html
+++ b/publications/index.html
@@ -108,6 +108,30 @@
                             <span class="tag tag-method">Chatbots</span>
                             <span class="tag tag-domain">Finance</span>
                             <br>
+                        
+                        <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
+                            <i>The Fifth IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications: IEEE TPS'23, Atlanta, 2023</i><br>
+                            Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta, Dezhi Wu<br>
+                            [Paper - coming soon]
+                            <span class="tag tag-type">Conference</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br>
+
+                        <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
+                            <i>IEEE Transactions on Technology and Society</i><br>
+                            Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
+                            <a href='https://arxiv.org/pdf/2302.02038.pdf' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Journal</span>
+                            <span class="tag tag-method">Trust Rating</span>
+                            <br>
+
+                        <li><b>Evaluating Chatbots to Promote Users' Trust -- Practices and Open Problems</b><br>
+                                <!-- <i>IEEE Transactions on Technology and Society</i> -->
+                                Biplav Srivastava, Kausik Lakkaraju, Tarmo Koppel, Vignesh Narayanan, Ashish Kundu, Sachindra Joshi <br>
+                                <a href='https://arxiv.org/pdf/2309.05680.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Chatbots</span>
+                                <br>
 
                         <li><b>On Safe and Usable Chatbots for Promoting Voter Participation</b><br>
                             <i>AI Magazine</i><br>
