--- a/publications/index.html
+++ b/publications/index.html
@@ -109,7 +109,7 @@
                             <span class="tag tag-domain">Finance</span>
                             <br>
                         
-                        <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
+                        <li><b>The Effect of Human v/s Synthetic Test Data and Round-tripping on Assessment of Sentiment Analysis Systems for Bias</b><br>
                             <i>The Fifth IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications: IEEE TPS'23, Atlanta, 2023</i><br>
                             Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta, Dezhi Wu<br>
                             [Paper - coming soon]
