--- a/projects/rating_page/index.html
+++ b/projects/rating_page/index.html
@@ -6,21 +6,14 @@
   <title>Rating of AI Systems</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"></script>
   <link rel="stylesheet" type="text/css" href="./stylesheet.css">
-
-<style>
-body {
-    margin: 0; /* Remove default margin */
-    padding: 0;
-    border: 0;
-}
-</style>
 </head>
+
 <body class="container">
 
-  <table style="margin:0;border:0;padding:0;">
+  <table style="width:80%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
     <tbody>
-      <tr>
-        <td>
+      <tr style="padding:0px">
+        <td style="padding-left:2.5%;padding-top:3%;width:63%;vertical-align:middle">
           <p style="text-align:left">
             <a href='https://ai4society.github.io/'>AI4Society Home</a> &nbsp/&nbsp
           </p>
@@ -28,7 +21,7 @@ body {
       </tr>
 
       <tr style="padding:0px">
-        <td style="padding:0;width:73%;vertical-align:middle">
+        <td style="padding-left:2.5%;width:63%;vertical-align:middle">
           <h1 style="display:flex;align-items:center;">
             <span
               style="background-color: cyan ;height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
