--- a/funding/index.html
+++ b/funding/index.html
@@ -25,7 +25,8 @@
                         <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                         <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                         <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                        <a href='../demos/index.html'>Demos</a>
+                        <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
+                        <a href='../news-journal/index.html'>News-Journal</a>
                     </p>
                 </td>
             </tr>
