--- a/members/index.html
+++ b/members/index.html
@@ -21,10 +21,11 @@
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <p style="text-align:left">
                         <a href='../index.html'>Home</a> &nbsp|&nbsp
+                        <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                         <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                         <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                        <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
-                        <a href='../demos/index.html'>Demos</a>
+                        <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
+                        <a href='../news-journal/index.html'>News-Journal</a>
                     </p>
                 </td>
             </tr>
