fixed homepage links

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
               <tr style="padding:0px">
                 <td style="padding-left:2.5%;padding-top:3%;width:63%;vertical-align:middle">
                   <p style="text-align:left">
-                    <a href='../index.html'>Home</a> &nbsp|&nbsp
-                    <a href='../members/index.html'>Members</a> &nbsp|&nbsp
-                    <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
-                    <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                    <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
-                    <a href='../news-journal/index.html'>News-Journal</a>
+                    <a href='index.html'>Home</a> &nbsp|&nbsp
+                    <a href='members/index.html'>Members</a> &nbsp|&nbsp
+                    <a href='projects/index.html'>Projects</a> &nbsp|&nbsp
+                    <a href='publications/index.html'>Publications</a> &nbsp|&nbsp
+                    <a href='demos/index.html'>Demos</a> &nbsp|&nbsp
+                    <a href='news-journal/index.html'>News-Journal</a>
                   </p>
                 </td>
               </tr>
