--- a/demos/index.html
+++ b/demos/index.html
@@ -26,7 +26,7 @@
                       <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                       <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
                       <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
-                      <a href='../news-journal/index.html'>News-Journal</a>
+                      <a href='../news-journal/index.html'>NewsLog</a>
 
                     </p>
                 </td>
