--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -33,7 +33,7 @@
             <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
 
-                <heading>News-Journal</heading>
+                <heading>NewsLog</heading>
                 <hr style="width: 100%; float: left;">
                 <tr style="padding:0px">
                     <td style="padding:2.5%;width:67%;vertical-align:top">
