--- a/index.html
+++ b/index.html
@@ -93,15 +93,27 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date">February 2024</div>
                       <div class="timeline-content">
-                        <p> Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved with a tutorial (LLMs for planning), a workshop (AI and elections), a deployed application paper (ULTRA), and counting.</p>
+                        <p> Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the premier AI conference, AAAI 2024, with a tutorial (LLMs for planning), a workshop (AI and elections), a deployed application paper (ULTRA), and counting.</p>
                       </div>
                     </div>
+
+                    <div class="timeline-item">
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-date">January 2024</div>
+                      <div class="timeline-content">
+                        <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha</a> will present a demo paper at CODS-COMAD conference (Group recommendation). We are also co-organizing the tutorial track of the conference.</p>
+                      </div>
+                    </div>
+                  </div>
                     
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
                       <div class="timeline-date">December 2023</div>
                       <div class="timeline-content">
-                        <p> <a href="https://vishal.github.io/" target="_blank">Vishal</a>  to present a paper at Neurips 2023 workshop on Generalized Planning.</p>    
+                        <p> <a href="https://vishal.github.io/" target="_blank">Vishal</a>  will present a paper at Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>    
+                    </div>
+                    <div class="timeline-content">
+                        <p> <a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav</a>  will participate with two posters at Americal Geophysical Union (AGU) (AI and water).</p>    
                     </div>
                     </div>
                     
@@ -109,7 +121,7 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date">November 2023</div>
                       <div class="timeline-content">
-                        <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper each at IEEE TPS and ACM AI and Finance (ICAIF) conferences. .</p>
+                        <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper each at IEEE TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
                       </div>
                     </div>
                   </div>
