--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date">November 2023</div>
                       <div class="timeline-content">
-                        <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper each at IEEE TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
+                        <p><a href="https://kausik-l.github.io/" target="_blank">Kausik</a> is presenting one paper each at IEEE TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
                       </div>
                     </div>
                   </div>
