--- a/publications/index.html
+++ b/publications/index.html
@@ -119,10 +119,10 @@
                             <br>
 
                         <li><b>Rating Sentiment Analysis Systems for Bias through a Causal Lens</b><br>
-                            <i>IEEE Transactions on Technology and Society</i><br>
+                            <!-- <i>IEEE Transactions on Technology and Society</i><br> -->
                             Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta<br>
                             <a href='https://arxiv.org/pdf/2302.02038.pdf' target="_blank">[Paper]</a>
-                            <span class="tag tag-type">Journal</span>
+                            <span class="tag tag-type">Preprint</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
 
