Update of aaai-24 Demo

--- a/demos/index.html
+++ b/demos/index.html
@@ -50,6 +50,25 @@
     <section id="portfolio" class="portfolio">
       <div style="margin: 0 auto;" class="container">
         <br>
+
+        <div style="display:flex;justify-content: center;gap:0px;">
+          <div style="flex:0.8">
+            <iframe width="300" height="200" src="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/preview"
+              title="Demo of Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning"
+              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div style="flex:1">
+            <h3 class="card-text">Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning<span class="tag tag-method">Automated Planning</span></h3>
+            <p>We present a demonstration of integrating Automated Planning with opinion dynamics, enabling users to visualize, simulate, and strategically influence opinion evolution in networks. This approach offers a practical solution for understanding and guiding information spread.</p>
+            <a href="../publications/papers_local/InfoSpread_AAAI24_Demo.pdf" target="_blank"
+              rel="noopener noreferrer">[Paper]</a>
+            <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link" target="_blank">[Demo Video]</a>
+          </div>
+        </div>
+        <br>
+        <br>
+
         <div style="display:flex;justify-content: center;gap:0px;">
           <div style="flex:0.8">
             <iframe width="300" height="200" src="https://www.youtube.com/embed/8MUtxsfVNIU"
