--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="timeline-dot"></div>
                         <div class="timeline-date month">February</div>
                         <div class="timeline-content">
-                            <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the premier AI conference, AAAI 2024, with a tutorial (LLMs for planning), a workshop (AI and elections), a deployed application paper (ULTRA), and counting.</p>
+                            <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will be involved at the premier AI conference, AAAI 2024, with a tutorial (LLMs for planning), a workshop (AI and elections), a deployed application paper (ULTRA), a demonstration of using Automated Planning for Information Spread Strategies in Social Networks and counting.</p>
                             <!-- Additional news items for February 2024... -->
                         </div>
                     </div>
