--- a/publications/index.html
+++ b/publications/index.html
@@ -78,6 +78,14 @@
 
                     <h2>2024</h2>
                     <ul class="papers-list">
+                        <li><b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</b><br>
+                            <i>Proceedings of the Thirty-Eighth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
+                            Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
+                            <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Demo</span>
+                            <span class="tag tag-method">Automated Planning</span>
+                            <br>
+
                         <li><b>(Deployed Application) Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
                             <i>Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
