--- a/publications/index.html
+++ b/publications/index.html
@@ -78,7 +78,16 @@
 
                     <h2>2024</h2>
                     <ul class="papers-list">
-                        <li><b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</b><br>
+
+                        <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
+                            <i>deployed application paper in Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
+                            Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
+                            <a href='https://arxiv.org/abs/2309.09404' target="_blank">[Paper]</a>
+                            <span class="tag tag-type">Conference</span>
+                            <span class="tag tag-method">Recommender Systems</span>
+                            <br>
+
+                       <li><b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</b><br>
                             <i>Proceedings of the Thirty-Eighth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
                             Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                             <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
@@ -86,13 +95,6 @@
                             <span class="tag tag-method">Automated Planning</span>
                             <br>
 
-                        <li><b>(Deployed Application) Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
-                            <i>Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
-                            Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
-                            <a href='https://arxiv.org/abs/2309.09404' target="_blank">[Paper]</a>
-                            <span class="tag tag-type">Conference</span>
-                            <span class="tag tag-method">Recommender Systems</span>
-                            <br>
 
                         <li><b>ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals</b><br>
                             <i>Proceedings of the 7th Joint International Conference on Data Science & Management of Data (CODS-COMAD) Demonstration Track, 2024</i><br>
