--- a/publications/index.html
+++ b/publications/index.html
@@ -80,7 +80,7 @@
                     <ul class="papers-list">
 
                         <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
-                            <i>deployed application paper in Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
+                            <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
                             <a href='https://arxiv.org/abs/2309.09404' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
