--- a/publications/index.html
+++ b/publications/index.html
@@ -88,7 +88,7 @@
                             <br>
 
                        <li><b>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning</b><br>
-                            <i>Proceedings of the Thirty-Eighth AAAI Conference on Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
+                            <i>Proceedings of the Thirty-Sixth Annual Conference of Association for Advancedment of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br>
                             Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns<br>
                             <a href='./papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Demo</span>
