--- a/activities/index.html
+++ b/activities/index.html
@@ -51,11 +51,16 @@
                         eg: event participations
 
                         <div class="activities-item">
-                          <div class="activities-year"></div>                                                  
+                          <div class="activities-year"></div>
                           <div class="activities-content">
-                              <p></p>
+                            <p>
+                              <span class="activities-content-title"></span><br>
+                              <span class="activities-content-event"></span><br>
+                              <span class="activities-content-members"></span><br>
+                              <span class="activities-content-month"></span>
+                              <span class="activities-content-misc"></span>
+                            </p>
                           </div>
-                        </div>
 
                         -->
 
@@ -149,7 +154,7 @@
                         </div>
 
                         <div class="activities-container">
-                          <h2 class="activities-type">Workshops</h2>
+                          <h2 class="activities-type">Workshops & Symposia</h2>
                         </div>                        
                       
                         <div class="activities-item">
