--- a/activities/index.html
+++ b/activities/index.html
@@ -19,13 +19,14 @@
             <tr style="padding:0px">
                 <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                     <p style="text-align:left">
-                        <a href='../index.html'>Home</a> &nbsp|&nbsp
-                        <a href='../members/index.html'>Members</a> &nbsp|&nbsp
-                        <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
-                        <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
-                        <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
-                        <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
-                        <a href='../activities/index.html'>Activities</a>
+                      <a href='../index.html'>Home</a> &nbsp|&nbsp
+                      <a href='../members/index.html'>Members</a> &nbsp|&nbsp
+                      <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
+                      <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
+                      <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
+                      <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
+                      <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
+                      <a href='../activities/index.html'>Activities</a>
                     </p>
                 </td>
             </tr>
