--- a/funding/index.html
+++ b/funding/index.html
@@ -25,6 +25,7 @@
                         <a href='../members/index.html'>Members</a> &nbsp|&nbsp
                         <a href='../projects/index.html'>Projects</a> &nbsp|&nbsp
                         <a href='../publications/index.html'>Publications</a> &nbsp|&nbsp
+                        <a href='../funding/index.html'>Funding</a> &nbsp|&nbsp
                         <a href='../demos/index.html'>Demos</a> &nbsp|&nbsp
                         <a href='../news-journal/index.html'>NewsLog</a> &nbsp|&nbsp
                         <a href='../activities/index.html'>Activities</a>
