--- a/publications/index.html
+++ b/publications/index.html
@@ -84,7 +84,7 @@
                         <li><b>Promoting Research Collaboration with Open Data Driven Team Recommendation in Response to Call for Proposals</b><br>
                             <i>Deployed Application paper in the Proceedings of the Thirty-Sixth Annual Conference on Innovative Applications of Artificial Intelligence (AAAI/IAAI-24)</i><br>
                             Siva Likitha Valluru, Biplav Srivastava, Sai Teja Paladi, Siwen Yan, Sriraam Natarajan<br>
-                            <a href='https://arxiv.org/abs/2309.09404' target="_blank">[Paper]</a>
+                            <a href='./papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Recommender Systems</span>
                             <br>
@@ -101,8 +101,7 @@
                         <li><b>ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals</b><br>
                             <i>Proceedings of the 7th Joint International Conference on Data Science & Management of Data (CODS-COMAD) Demonstration Track, 2024</i><br>
                             Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sugata Gangopadhyay<br>
-                            <!--<a href='https://arxiv.org/abs/2309.09404' target="_blank">[Paper - Coming Soon]</a>-->
-                            [Paper - Coming Soon]
+                             <a href='./papers_local/Ultra-Demo-IITR-CODS_COMAD2024.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Recommender Systems</span>
                             <br>
