--- a/publications/index.html
+++ b/publications/index.html
@@ -115,7 +115,7 @@
                             <i>4th ACM International Conference on AI in Finance: ICAIF'23, New York, 2023</i><br>
                             Kausik Lakkaraju, Sara Rae Jones, Sai Krishna Revanth Vuruma, Vishal Pallagani, Bharath C Muppasani and 
                             Biplav Srivastava<br>
-                            [Paper - coming soon]
+                            <a href='https://dl.acm.org/doi/fullHtml/10.1145/3604237.3626867' target="_blank">[Paper]</a> 
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Chatbots</span>
                             <span class="tag tag-domain">Finance</span>
