--- a/publications/index.html
+++ b/publications/index.html
@@ -145,6 +145,14 @@
                                 <span class="tag tag-method">Chatbots</span>
                                 <br>
 
+                        <li><b>Trust and ethical considerations in a multi-modal, explainable AI-driven chatbot tutoring system: The case of collaboratively solving Rubik’s Cube</b><br>
+                                <!-- <i>IEEE Transactions on Technology and Society</i> -->
+                                Kausik Lakkaraju, Vedant Khandelwal, Biplav Srivastava, Forest Agostinelli, Hengtao Tang, Prathamjeet Singh, Dezhi Wu, Matt Irvin, Ashish Kundu<br>
+                                <a href='https://drive.google.com/file/d/14kmrr7HTFXtdpzx-7KEItftQAO_6m5li/view' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Workshop</span>
+                                <span class="tag tag-method">Chatbots</span>
+                                <br>
+
                         <li><b>On Safe and Usable Chatbots for Promoting Voter Participation</b><br>
                             <i>AI Magazine</i><br>
                             Bharath Muppasani, Vishal Pallagani, Kausik Lakkaraju, Shuge Lei, Biplav Srivastava, Brett Robertson, Andrea Hickerson, Vignesh Narayanan<br>
