--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -191,7 +191,8 @@
               <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD-2024)</i><br>
               <!--<a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>-->
               <!--<a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>-->
-              [Paper - <span style="color:red"><i>Coming Soon</i></span>]
+              <a href="https://dl.acm.org/doi/10.1145/3632410.3632503" target="_blank"><b>[Paper]</b></a>
+              <a href="./bib/ultra-cods.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
             </li>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
