--- a/publications/index.html
+++ b/publications/index.html
@@ -101,7 +101,7 @@
                         <li><b>ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals</b><br>
                             <i>Proceedings of the 7th Joint International Conference on Data Science & Management of Data (CODS-COMAD) Demonstration Track, 2024</i><br>
                             Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sugata Gangopadhyay<br>
-                             <a href='./papers_local/Ultra-Demo-IITR-CODS_COMAD2024.pdf' target="_blank">[Paper]</a>
+                             <a href='https://dl.acm.org/doi/10.1145/3632410.3632503' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Demo</span>
                             <span class="tag tag-method">Recommender Systems</span>
                             <br>
