--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -29,7 +29,7 @@
           </h1>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
             style="color:red;"><b>NEW!</b></mark> Our <a
-            href="https://ai4society.github.io/projects/teaming/index.html#:~:text=%5B2024%5D%20Promoting%20Research%20Collaboration%20with%20Open%20Data%20Driven%20Team%20Recommendation%20in%20Response%20to%20Call%20for%20Proposals">paper</a>
+            href="https://arxiv.org/abs/2309.09404">paper</a>
           that presents a novel system to recommend teams using a variety of AI methods has been accepted to <a
             href="https://aaai.org/aaai-conference/iaai-24-call-for-participation/"
             style="text-decoration:none;"><b><i>IAAI-AAAI'2024</i></b></a> and will receive the <span
@@ -37,7 +37,7 @@
               Application</i></span> award.</p>
           <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
             style="color:red;"><b>NEW!</b></mark> Our <a
-            href="https://ai4society.github.io/projects/teaming/index.html#:~:text=%5B2024%5D%20ULTRA%3A%20Exploring%20Team%20Recommendations%20in%20Two%20Geographies%20Using%20Open%20Data%20in%20Response%20to%20Call%20for%20Proposals.">demo paper</a> about deploying <a href="https://ai4society.github.io/teaming/#:~:text=We%20introduce%20ULTRA,others%20can%20use.>">ULTRA</a> in two geographical regions of the world has been accepted to <a href="https://cods-comad.in/call-for-demo-track-papers.php" style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
+            href="https://dl.acm.org/doi/10.1145/3632410.3632503">demo paper</a> about deploying <a href="https://ai4society.github.io/teaming/#:~:text=We%20introduce%20ULTRA,others%20can%20use.>">ULTRA</a> in two geographical regions of the world has been accepted to <a href="https://cods-comad.in/call-for-demo-track-papers.php" style="text-decoration:none;"><b><i>CODS-COMAD'2024</i></b></a>.</p>
           <hr>
 
           <p style="text-align: justify;">
