--- a/projects/teaming/index.html
+++ b/projects/teaming/index.html
@@ -176,7 +176,7 @@
               <b>[Demo Videos for <a href="https://www.youtube.com/watch?v=8MUtxsfVNIU" target="_blank">UofSC</a>, <a
                   href="https://www.youtube.com/watch?v=CUk_Rgvd5kg" target="_blank">IIT-R</a>]</b>
               <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper]</b></a>
-              <a href="./bib/ultra-2.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="./bib/ultra-iaai.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
               <div class="video-container" style="display: flex; justify-content: center;">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/8MUtxsfVNIU"
@@ -189,19 +189,14 @@
             <br>
             <li>[2024] ULTRA: Exploring Team Recommendations in Two Geographies Using Open Data in Response to Call for Proposals.
               <br><i>ACM India Joint International Conference on Data Science and Management of Data (CODS-COMAD-2024)</i><br>
-              <!--<a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>-->
-              <!--<a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>-->
               <a href="https://dl.acm.org/doi/10.1145/3632410.3632503" target="_blank"><b>[Paper]</b></a>
-              <a href="./bib/ultra-cods.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="./bib/ultra-cods.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
             </li>
             <li>[2022] ULTRA: A Data-driven Approach for Recommending Team Formation in Response to Proposal Calls.
               <br><i>IEEE ICDM Workshop on AI for Nudging and Personalization (WAIN)</i><br>
-
-              <!--<a href="http://casy.cse.sc.edu/ultra/teaming/" target="_blank"><b>[Tool Website]</b></a>-->
-              <!--<a href="https://youtu.be/8MUtxsfVNIU/" target="_blank"><b>[Demo Video]</b></a>-->
               <a href="https://arxiv.org/abs/2201.05646" target="_blank"><b>[Paper]</b></a>
-              <a href="./bib/ultra.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="./bib/ultra-icdm.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br>
             </li>
             <br>
@@ -284,7 +279,7 @@
               <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/363608853_KITE_-_An_Unsupervised_Effective_and_Inclusive_Approach_for_Textual_Content_Exploration/links/6324a33a071ea12e363a790e/KITE-An-Unsupervised-Effective-and-Inclusive-Approach-for-Textual-Content-Exploration.pdf"
                 target="_blank"><b>[Paper]</b></a>
               <a href="https://github.com/BunnyTeja/Text-Visualization" target="_blank"><b>[GitHub]</b></a>
-              <a href="./bib/kite.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+              <a href="./bib/kite.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
               <br><br>
               <center>
                 <div style="position:relative;width:fit-content;height:fit-content;">
