--- a/members/index.html
+++ b/members/index.html
@@ -123,6 +123,19 @@
                             <br><br>
                         </figcaption>
 
+                        <img src="images_members/rushil.jpg">
+                        <figcaption style="padding-top: -10%;">
+                            <b>Rushil Thareja</b><br><br>
+                            <a target="_blank" href="https://www.linkedin.com/in/rushil-thareja-a80400179/">Homepage</a>,
+                            <a target="_blank" href="mailto:rthareja@email.sc.edu">rthareja@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Recommender Systems</span>,
+                            <span class="tag tag-method">Trust Rating</span>,
+                            <span class="tag tag-method">Chatbots</span>
+                            <br><br>
+                        </figcaption>
+
                         <img src="images_members/likitha.png">
                         <figcaption style="padding-top: -10%;">
                             <b>Siva Likitha Valluru</b><br><br>
