--- a/projects/rating_page/index.html
+++ b/projects/rating_page/index.html
@@ -116,7 +116,8 @@
                 
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta and Dezhi Wu. The Effect of Human v/s Synthetic Test Data and Round-tripping on Assessment of Sentiment Analysis Systems for Bias. IEEE TPS 2023.<br><a href="https://drive.google.com/file/d/1nd3T-9Sg5ccS2pzTDK7_yndSA9Lq_OAE/view?usp=sharing" target="_blank"><b>[Paper]</b></a>
+                    <li>Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta and Dezhi Wu. The Effect of Human v/s Synthetic Test Data and Round-tripping on Assessment of Sentiment Analysis Systems for Bias. IEEE TPS 2023.<br>
+                      <a href="../../publications/papers_local/M_SAS_Final_IEEE.pdf" target="_blank"><b>[Paper]</b></a>
                       <a href="https://github.com/ai4society/causal-sas-rating.git" target="_blank" type="text/plain"><b>[GitHub Respository]</b></a>
                       <a href="../rating_page/bib/mm_sas.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
@@ -220,7 +221,8 @@
               
                 <p><i><b>Representative Publications</b></i></p>
                 <ul>
-                  <li>MUNDADA, G., LAKKARAJU, K., & SRIVASTAVA, B. ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems.<br><a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf" target="_blank"><b>[Paper]</b></a>
+                  <li>MUNDADA, G., LAKKARAJU, K., & SRIVASTAVA, B. ROSE: Tool and Data ResOurces to Explore the Instability of SEntiment Analysis Systems.<br>
+                    <a href="https://www.researchgate.net/profile/Biplav-Srivastava/publication/358475224_ROSE_Tool_and_Data_ResOurces_to_Explore_the_Instability_of_SEntiment_Analysis_Systems/links/6203f8d0c83d2b75dffd6ecc/ROSE-Tool-and-Data-ResOurces-to-Explore-the-Instability-of-SEntiment-Analysis-Systems.pdf" target="_blank"><b>[Paper]</b></a>
                     <a href="https://github.com/ai4society/sentiment-rating.git" target="_blank" type="text/plain"><b>[GitHub Respository]</b></a>
                     <a href="../rating_page/bib/rose_tool.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   </li>
