--- a/publications/index.html
+++ b/publications/index.html
@@ -124,7 +124,7 @@
                         <li><b>The Effect of Human v/s Synthetic Test Data and Round-tripping on Assessment of Sentiment Analysis Systems for Bias</b><br>
                             <i>The Fifth IEEE International Conference on Trust, Privacy and Security in Intelligent Systems, and Applications: IEEE TPS'23, Atlanta, 2023</i><br>
                             Kausik Lakkaraju, Aniket Gupta, Biplav Srivastava, Marco Valtorta, Dezhi Wu<br>
-                            [Paper - coming soon]
+                            <a href='./papers_local/M_SAS_Final_IEEE.pdf' target="_blank">[Paper]</a>
                             <span class="tag tag-type">Conference</span>
                             <span class="tag tag-method">Trust Rating</span>
                             <br>
