--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -33,10 +33,13 @@
                     <span style="background-color:hsl(60, 100%, 50%);height:20px;width:20px;margin-right:10px;border:1px solid black;"></span>
                     Generalized Planning
                   </h2>
+                  <p style="border-width:3px; border-style:solid; border-color:black;padding: 10px;"><mark
+                    style="color:red;"><b>NEW!</b></mark> Our lab titled 'Harnessing Large Language Models for Planning: A Lab on Strategies for Success and Mitigation of Pitfalls' has been accepted for presentation at
+                    <b><i>AAAI 2024</i></b></a>. The event will take place in <b><i>Vancouver, Canada</i></b> on <b><i>February 21, 2024</i></b>. For more information about the lab, you can visit our <a target="_blank" href="https://sites.google.com/view/llmsxplanning-lab/home">website.</a></p>
                   <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Generative Models for Automated Planning</b></span><br>
-                      <i><b>Collaborators: </b>AIISC - University of South Carolina, IBM Research, University of Udine, University of Brescia</i>
-                      <br>
-                      <i><b>Advisors: </b><a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Francesca.Rossi2">Francesca Rossi</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=us-lhoresh">Lior Horesh</a>, <a target="_blank" href="https://www.cs.cmu.edu/~kmuruges/Home.html">Keerthiram Murugesan</a></i>
+                      <i><b>Collaborators:</b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>, <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>, 
+                        <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Francesca.Rossi2">Francesca Rossi</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=us-lhoresh">Lior Horesh</a>, <a target="_blank" href="https://www.cs.cmu.edu/~kmuruges/Home.html">Keerthiram Murugesan</a>, 
+                        <a target="_blank" href="https://www.linkedin.com/in/kaushik-roy-b8a323ab/">Kaushik Roy</a>, <a target="_blank" href="https://amit.aiisc.ai/">Amit Sheth</a></i>
                       <br>
                       Large Language Models (LLMs) have been the subject of active research, significantly advancing the field of Natural Language Processing (NLP). 
                       From BERT to BLOOM, LLMs have surpassed state-of-the-art results in various natural language tasks such as question-answering, summarization, and text generation. 
@@ -46,8 +49,24 @@
                   </p>
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Plansformer: Generating Symbolic Plans using Transformers <br> <a href="https://arxiv.org/abs/2212.08681" target="_blank"><b>[Paper]</b></a>
-                      <a href="uo-sc-plansformer.vercel.app" target="_blank"><b>[Tool Website]</b></a> <a href="https://www.youtube.com/watch?v=_1rlctCGsrk" target="_blank"><b>[Demo]</b></a>
+                    <li>On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS) <br> 
+                      <i>Preprint</i> <br>
+                      <a href="https://arxiv.org/abs/2401.02500" target="_blank"><b>[Paper]</b></a>
+                      <a href="./bib/position.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    </li>
+                    <li>Understanding the Capabilities of Large Language Models for Automated Planning <br> 
+                      <i>Preprint</i> <br>
+                      <a href="https://arxiv.org/abs/2305.16151" target="_blank"><b>[Paper]</b></a>
+                      <a href="./bib/understanding.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    </li>
+                    <li> Plansformer Tool: Demonstrating Generation of Symbolic Plans Using Transformers <br> 
+                      <i>Proc. of the Thirty-Second International Joint Conference on Artificial Intelligence (IJCAI-23) Demonstrations Track</i> <br>
+                      <a href="https://www.ijcai.org/proceedings/2023/0839.pdf" target="_blank"><b>[Paper]</b></a><a href="uo-sc-plansformer.vercel.app" target="_blank"><b>[Tool Website]</b></a>
+                      <a href="https://www.youtube.com/watch?v=_1rlctCGsrk" target="_blank"><b>[Demo]</b></a><a href="./bib/plansformer_tool.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                    </li>
+                    <li>Plansformer: Generating Symbolic Plans using Transformers <br> 
+                      <i>NeurIPS 2023 Workshop on Generalization in Planning (GenPlan 2023)</i><br>
+                      <a href="https://arxiv.org/abs/2212.08681" target="_blank"><b>[Paper]</b></a>
                       <a href="./bib/plansformer.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                     </li>
                   </ul>
@@ -63,10 +82,8 @@
             <tr style="padding: 0px">
               <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                 <p style="text-align: justify;"><span style="background-color: hsl(60, 100%, 50%);"><b>Planning using Fast and Slow AI Architecture</b></span><br>
-                  <i><b>Collaborators: </b>IBM Research, AIISC - University of South Carolina, University of Udine, University of Brescia, Union College (New York), Tulane University, University of West Florida</i>
-                  <br>
-                  <i><b>Advisors: </b><a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Francesca.Rossi2">Francesca Rossi</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=us-lhoresh">Lior Horesh</a>, <a target="_blank" href="https://www.cs.cmu.edu/~kmuruges/Home.html">Keerthiram Murugesan</a></i>
-                  <br>
+                  <i><b>Collaborators: </b><a target="_blank" href="https://vishalpallagani.github.io/">Vishal Pallagani</a>, <a target="_blank" href="https://bharathmuppasani.github.io/index.html">Bharath Muppasani</a>, 
+                    <a target="_blank" href="https://sites.google.com/site/biplavsrivastava/home?authuser=0">Biplav Srivastava</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=ibm-Francesca.Rossi2">Francesca Rossi</a>, <a target="_blank" href="https://researcher.watson.ibm.com/researcher/view.php?person=us-lhoresh">Lior Horesh</a>, <a target="_blank" href="https://www.cs.cmu.edu/~kmuruges/Home.html">Keerthiram Murugesan</a></i><br>
                   The newly introduced idea of Fast and Slow AI (SOFAI) architecture is inspired from the cognitive theories mentioned by Daniel Kahneman in Thinking Fast and Slow. 
                   This research project aims to build AI-supported machines that can 
                   <ol>
@@ -86,15 +103,20 @@
               
                 <p><i><b>Representative Publications</b></i></p>
                 <ul>
-                  <li>Fast and Slow Planning<br> <a href="https://arxiv.org/pdf/2303.04283.pdf" target="_blank"><b>[Paper]</b></a>
+                  <li>Plan-SOFAI: A Neuro-Symbolic Planning Architecture<br> 
+                    <i>Neuro-Symbolic Learning and Reasoning in the era of Large Language Models (NuCLeaR) Workshop at AAAI 2024</i><br>
+                    <a href="https://openreview.net/pdf?id=ORAhay0H4x" target="_blank"><b>[Paper]</b></a>
+                    <a href="./bib/plan-sofai.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  </li> 
+                  <li>Fast and Slow Planning<br> 
+                    <i>Preprint</i><br>
+                    <a href="https://arxiv.org/pdf/2303.04283.pdf" target="_blank"><b>[Paper]</b></a>
                     <a href="./bib/fastslow.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   </li>  
-                  <li>Epistemic Planning in a Fast and Slow Setting<br> <a href="https://ceur-ws.org/Vol-3332/paper7.pdf" target="_blank"><b>[Paper]</b></a>
+                  <li>Epistemic Planning in a Fast and Slow Setting<br> 
+                    <i>AAAI 2022 Fall Symposium Series, Thinking Fast and Slow and Other Cognitive Theories in AI track</i><br>
+                    <a href="https://ceur-ws.org/Vol-3332/paper7.pdf" target="_blank"><b>[Paper]</b></a>
                     <a href="./bib/epistemic.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
-                  </li>
-                  <li>Plansformer: Generating Symbolic Plans using Transformers <br> <a href="https://arxiv.org/abs/2212.08681" target="_blank"><b>[Paper]</b></a>
-                    <a href="uo-sc-plansformer.vercel.app" target="_blank"><b>[Tool Website]</b></a> <a href="https://www.youtube.com/watch?v=_1rlctCGsrk" target="_blank"><b>[Demo]</b></a>
-                    <a href="./bib/plansformer.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
                   </li>
                 </ul>
                 <tr style="padding:0px">
