--- a/projects/index.html
+++ b/projects/index.html
@@ -82,7 +82,7 @@
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
                             <span style="background-color:hsl(60, 100%, 50%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
-                            Planning Using Fast and Slow AI Architecture
+                            Generalized Planning
 
                             <span class="tag tag-method">Neuro-Symbolic AI</span>
                             <span class="tag tag-method">Automated Planning</span>
